Fix gap in submenu popup

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,3 +4,7 @@
 .ant-tabs-content{
     height: 100%;
 }
+
+.ant-menu-submenu > .ant-menu {
+    margin-top: -8px;
+  }
